<resources>
    <string name="app_name">Calculator</string>
    <string name="main_ac">AC</string>
    <string name="main_1">1</string>
    <string name="main_2">2</string>
    <string name="main_3">3</string>
    <string name="main_4">4</string>
    <string name="main_5">5</string>
    <string name="main_6">6</string>
    <string name="main_7">7</string>
    <string name="main_8">8</string>
    <string name="main_9">9</string>
    <string name="main_10">10</string>
    <string name="main_0">0</string>
</resources>